# stealer-parser

./: .env.example  .gitignore  ASYNC_ENHANCEMENT_README.md  Design ideas.md  Dockerfile.api  README.md  Roadmap.md  TODO.md  Unsaved Document 1  credential_cookie_cli.py  docker-compose.yml  example_credential_cookie_matcher.py  pyproject.toml  test_cli.py  test_database.py  test_error_handling.py
.agentic-tools-mcp/tasks/: tasks.json
.github/: copilot-instructions.md
api/: async_processor.py  database.py  main.py  migrate.py  monitor.py  requirements.txt  worker.py
docs/: credential_cookie_cli.md  credential_cookie_matcher.md  database_export.md  error_handling_improvements.md  implementation_summary.md
record_definitions/: autofill.yml  cookie.yml  credential.yml  system.yml  vault.yml
ref/: strategy_old.py
scripts/: analyze_formats.py  summarize_browsers.py
stealer_parser/: config.py  containers.py  credential_cookie_matcher.py  helpers.py  main.py  processing.py  search_stealer_credits.py
stealer_parser/cli/: credential_cookie_cli.py
stealer_parser/database/: __init__.py  migration_001.sql  postgres.py  schema.sql
stealer_parser/models/: __init__.py  cookie.py  directory_wrapper.py  leak.py  user_file.py  vault.py
stealer_parser/parsing/: __init__.py  definition_store.py  definitions.py  factory.py  parser.py  (+4 more)
tests/: conftest.py  test_configurable_parser.py  test_credential_definition_soft.py  test_definition_matching.py  test_di_wiring.py  test_integration_data_dir.py  test_integration_data_zip.py  test_parser_selection.py  test_vault_parser.py
(+12 files in other folders)
